[package]
name = "cards_ui"
version = "0.1.1"
authors = ["Pierre Chevalier <pierrechevalier83@gmail.com>"]

[dependencies]
conrod = { git = "https://github.com/PistonDevelopers/conrod.git", branch = "master" }
find_folder = "0.3.0"
piston_window = "0.51"
[dependencies.cards]
git = "https://github.com/th4t/cards-rs.git"
